Updated Google Youtube - Graphing.ipynb
changed songs to videos

--- a/Google Youtube - Graphing.ipynb
+++ b/Google Youtube - Graphing.ipynb
@@ -1893,7 +1893,7 @@
    "id": "b3e999f5-120f-4c9d-9882-744e44b5f199",
    "metadata": {},
    "source": [
-    "### The graph shows that the more songs you have, the more chances of getting more views.\r\n",
+    "### The graph shows that the more videos you have, the more chances of getting more views.\r\n",
     "The more entries you send the more chances of winning !!!"
    ]
   }
